# ai_audience_pulse

./: .gitignore  license.txt  readme.md
assets/yamnet-tensorflow2-yamnet-v1/: README.md
code/: README.md  cleanup-config  configure-network  gennetconfig  run  setup
code/audio/: audio.test.py  audio_classifier.py  local_audio_recording.py  pyproject.toml  readme.md
code/camera/esp32s3/camera_web_server_for_esp-arduino_2.0.x/: camera_web_server_for_esp-arduino_2.0.x.ino
code/camera/esp32s3/rust_stream/stream-video-s3/: .gitignore  AGENTS.md  CAMERA_README.md  Cargo.toml  README.md  TODO.md  test.sh
code/camera/esp32s3/rust_stream/stream-video-s3/src/: lib.rs  ov2640.rs  ov2640_tables.rs
code/camera/esp32s3/rust_stream/stream-video-s3/ui/: index.html
code/frontend/: .gitignore  readme.md  todo.md
code/frontend/html/: index.html  index.js
code/frontend/stream/: package-lock.json  package.json  pnpm-lock.yaml
code/frontend/stream/src/: app.html
code/frontend/stream/src/lib/: chart.ts  websocket.ts
code/frontend/stream/src/lib/components/: Alert.svelte  ColorLegend.svelte  FloatingReactions.svelte  Footer.svelte  Header.svelte  LoadingSpinner.svelte  Sidebar.svelte  SilenceIndicator.svelte  Stats.svelte
code/frontend/stream/src/lib/styles/: utils.css
code/frontend/stream/src/routes/: +page.svelte
code/frontend/stream/src/routes/thumbs/: +page.svelte
code/ml/: face.py  main.py  pyproject.toml  readme.md  references.md
code/python_tests/: bmp_image_upload_server.py
