[project]
name = "ml"
version = "0.1.0"
description = "machine learning: face detection & emotion classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyrefly>=0.39.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.223",
]
